# KotobaLink

./: .gitignore  README.md  package.json  pnpm-lock.yaml  project.config.json  project.private.config.json
apps/: README.md
apps/backend/: .dockerignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  kotobalink-backend.service  pyproject.toml
apps/backend/alembic/: README.md  env.py  script.py.mako
apps/backend/alembic/versions/: 20260323_0001_initial_core_tables.py  20260325_0002_add_material_release_versions.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: router.py
apps/backend/app/api/routes/: health.py
apps/backend/app/common/: schemas.py
apps/backend/app/config/: settings.py
apps/backend/app/db/: dependencies.py  init_data.py  mixins.py  models.py  session.py
apps/backend/app/modules/auth/: router.py  schemas.py  service.py
apps/backend/app/modules/course/: __init__.py  models.py  router.py  schemas.py  service.py
apps/backend/app/modules/materials/: router.py  schemas.py  service.py
apps/backend/app/modules/miniapp/: router.py  schemas.py  service.py
apps/backend/app/modules/order/: __init__.py  models.py  router.py  schemas.py  service.py
apps/backend/app/modules/student/: __init__.py  models.py  router.py  schemas.py  service.py
apps/backend/tests/: test_health.py
docs/: README.md  api-field-contracts.md  api-requirements.md  data-architecture.md  data-entities.md  demo-features.md  development-guide.md  docs-site-plan.md  feature-closed-loops.md  index.md  material-json-schema.md  page-inventory.md  (+3 more)
(+256 files in other folders)
